include/StTrgApi.h

//Callback Function
typedef void (WINAPI *funcExposureEndCallback)(HANDLE hCamera, DWORD dwFrameNo, PVOID pvContext);
typedef void (WINAPI *funcTransferEndCallback)(HANDLE hCamera, DWORD dwFrameNo, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw, PVOID pvContext);
typedef void (WINAPI *funcRcvErrorCallback)(HANDLE hCamera, DWORD dwErrorCode, PVOID pvContext);
//-----------------------------------------------------------------------------
//Shutter Gain Control
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_SetGain(HANDLE hCamera, WORD wGain);
BOOL WINAPI StTrg_GetGain(HANDLE hCamera, PWORD pwGain);
BOOL WINAPI StTrg_GetMaxGain(HANDLE hCamera, PWORD pwMaxGain);
BOOL WINAPI StTrg_GetGainDBFromSettingValue(HANDLE hCamera, WORD wGain, PFLOAT pfGaindB);
BOOL WINAPI StTrg_GetExposureClock(HANDLE hCamera, PDWORD pdwExposureValue);
BOOL WINAPI StTrg_SetExposureClock(HANDLE hCamera, DWORD dwExposureValue);
BOOL WINAPI StTrg_GetMaxShortExposureClock(HANDLE hCamera, PDWORD pdwMaximumExposureClock);
BOOL WINAPI StTrg_GetMaxLongExposureClock(HANDLE hCamera, PDWORD pdwMaximumExposureClock);
BOOL WINAPI StTrg_GetExposureClockFromTime(HANDLE hCamera, FLOAT fExpTime, PDWORD pdwExposureClock);
BOOL WINAPI StTrg_GetExposureTimeFromClock(HANDLE hCamera, DWORD dwExposureClock, PFLOAT pfExpTime);
BOOL WINAPI StTrg_SetDigitalGain(HANDLE hCamera, WORD wDigitalGain);
BOOL WINAPI StTrg_GetDigitalGain(HANDLE hCamera, PWORD pwDigitalGain);
BOOL WINAPI StTrg_ALC(HANDLE hCamera, WORD wCurrentBrightness, PDWORD pdwALCStatus);
BOOL WINAPI StTrg_GetAveragePixelValue(DWORD dwImageWidth, DWORD dwImageHeight, WORD wColorArray, DWORD dwTransferBitsPerPixel, PBYTE pbyteRaw, DWORD dwAOIOffsetX, DWORD dwAOIOffsetY, DWORD dwAOIWidth, DWORD dwAOIHeight, PFLOAT pfAverage);
BOOL WINAPI StTrg_SetALCMode(HANDLE hCamera, BYTE byteALCMode);
BOOL WINAPI StTrg_GetALCMode(HANDLE hCamera, PBYTE pbyteALCMode);
BOOL WINAPI StTrg_SetALCTargetLevel(HANDLE hCamera, WORD wLevel);
BOOL WINAPI StTrg_GetALCTargetLevel(HANDLE hCamera, PWORD pwLevel);
BOOL WINAPI StTrg_GetAGCMinGain(HANDLE hCamera, PWORD pwMinGain);
BOOL WINAPI StTrg_SetAGCMinGain(HANDLE hCamera, WORD wMinGain);
BOOL WINAPI StTrg_GetAGCMaxGain(HANDLE hCamera, PWORD pwMaxGain);
BOOL WINAPI StTrg_SetAGCMaxGain(HANDLE hCamera, WORD wMaxGain);
BOOL WINAPI StTrg_GetAEMinExposureClock(HANDLE hCamera, PDWORD pdwMinExposureClock);
BOOL WINAPI StTrg_SetAEMinExposureClock(HANDLE hCamera, DWORD dwMinExposureClock);
BOOL WINAPI StTrg_GetAEMaxExposureClock(HANDLE hCamera, PDWORD pdwMaxExposureClock);
BOOL WINAPI StTrg_SetAEMaxExposureClock(HANDLE hCamera, DWORD dwMaxExposureClock);
//-----------------------------------------------------------------------------
//Trigger
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetTriggerMode(HANDLE hCamera, PDWORD pdwTriggerMode);
BOOL WINAPI StTrg_SetTriggerMode(HANDLE hCamera, DWORD dwTriggerMode);
BOOL WINAPI StTrg_GetTriggerTiming(HANDLE hCamera, DWORD dwTriggerTimingType, PDWORD pdwValue);
BOOL WINAPI StTrg_SetTriggerTiming(HANDLE hCamera, DWORD dwTriggerTimingType, DWORD dwValue);
BOOL WINAPI StTrg_SoftTrigger(HANDLE hCamera);
BOOL WINAPI StTrg_SoftSubTrigger(HANDLE hCamera);
BOOL WINAPI StTrg_TriggerReadOut(HANDLE hCamera);
//-----------------------------------------------------------------------------
//IOPin
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetIOPinDirection(HANDLE hCamera, PDWORD pdwDirection);
BOOL WINAPI StTrg_SetIOPinDirection(HANDLE hCamera, DWORD dwDirection);
BOOL WINAPI StTrg_GetIOPinPolarity(HANDLE hCamera, PDWORD pdwPolarity);
BOOL WINAPI StTrg_SetIOPinPolarity(HANDLE hCamera, DWORD dwPolarity);
BOOL WINAPI StTrg_GetIOPinMode(HANDLE hCamera, BYTE bytePinNo, PDWORD pdwMode);
BOOL WINAPI StTrg_SetIOPinMode(HANDLE hCamera, BYTE bytePinNo, DWORD dwMode);
BOOL WINAPI StTrg_GetIOPinStatus(HANDLE hCamera, PDWORD pdwStatus);
BOOL WINAPI StTrg_SetIOPinStatus(HANDLE hCamera, DWORD dwStatus);
BOOL WINAPI StTrg_GetSwStatus(HANDLE hCamera, PDWORD pdwSwStatus);
BOOL WINAPI StTrg_GetLEDStatus(HANDLE hCamera, PDWORD pdwLEDStatus);
BOOL WINAPI StTrg_SetLEDStatus(HANDLE hCamera, DWORD dwLEDStatus);
//-----------------------------------------------------------------------------
//Timeout
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_GetTimeOut(HANDLE hCamera, DWORD dwTimeOutType, PDWORD pdwTimeOutMS);
BOOL WINAPI StTrg_SetTimeOut(HANDLE hCamera, DWORD dwTimeOutType, DWORD dwTimeOutMS);
//-----------------------------------------------------------------------------
//Callback Function
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_SetExposureEndCallback(HANDLE hCamera, funcExposureEndCallback func, PVOID pvContext);
BOOL WINAPI StTrg_SetTransferEndCallback(HANDLE hCamera, funcTransferEndCallback func, PVOID pvContext);
BOOL WINAPI StTrg_SetRcvErrorCallback(HANDLE hCamera, funcRcvErrorCallback func, PVOID pvContext);
//-----------------------------------------------------------------------------
//Image Acquisition
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_SetRcvMsgWnd(HANDLE hCamera, HWND hWnd);
BOOL WINAPI StTrg_SetRawSnapShotBufferCount(HANDLE hCamera, DWORD dwBufferCount);
BOOL WINAPI StTrg_TakeRawSnapShot(HANDLE hCamera, PBYTE pbyteRaw, DWORD dwBufferSize, PDWORD pdwNumberOfByteTrans, PDWORD pdwFrameNo, DWORD dwMilliseconds);
//-----------------------------------------------------------------------------
//Transfer Control
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_StartTransfer(HANDLE hCamera);
BOOL WINAPI StTrg_StopTransfer(HANDLE hCamera);
//-----------------------------------------------------------------------------
//Noise Reduction
//-----------------------------------------------------------------------------
BOOL WINAPI StTrg_NoiseReduction(HANDLE hCamera, DWORD dwNoiseReductionMode, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw);
BOOL WINAPI StTrg_NoiseReduction2(HANDLE hCamera, DWORD dwNoiseReductionMode, DWORD dwWidth, DWORD dwHeight, WORD wColorArray, PBYTE pbyteRaw, WORD wRawBitsPerPixel);