SetCameraFunction.h

BOOL	SetGain(HANDLE hCamera);
BOOL	SetTriggerMode(HANDLE hCamera);
BOOL	SetTimeOut(HANDLE hCamera);