include/StTrgAPI.vb

	
	'------------------------------------------------------------------------------
	'Shutter Gain Control
	'------------------------------------------------------------------------------
	Public Declare Function SetGain Lib "StTrgAPI.dll" Alias "StTrg_SetGain" (ByVal hCamera As IntPtr, ByVal wGain As System.UInt16) As integer
	Public Declare Function GetGain Lib "StTrgAPI.dll" Alias "StTrg_GetGain" (ByVal hCamera As IntPtr, ByRef pwGain As System.UInt16) As integer
	Public Declare Function GetMaxGain Lib "StTrgAPI.dll" Alias "StTrg_GetMaxGain" (ByVal hCamera As IntPtr, ByRef pwMaxGain As System.UInt16) As integer
	Public Declare Function GetGainDBFromSettingValue Lib "StTrgAPI.dll" Alias "StTrg_GetGainDBFromSettingValue" (ByVal hCamera As IntPtr, ByVal wGain As System.UInt16, ByRef pfGaindB As Single) As integer
	Public Declare Function GetExposureClock Lib "StTrgAPI.dll" Alias "StTrg_GetExposureClock" (ByVal hCamera As IntPtr, ByRef pdwExposureValue As System.UInt32) As integer
	Public Declare Function SetExposureClock Lib "StTrgAPI.dll" Alias "StTrg_SetExposureClock" (ByVal hCamera As IntPtr, ByVal dwExposureValue As System.UInt32) As integer
	Public Declare Function GetMaxShortExposureClock Lib "StTrgAPI.dll" Alias "StTrg_GetMaxShortExposureClock" (ByVal hCamera As IntPtr, ByRef pdwMaximumExposureClock As System.UInt32) As integer
	Public Declare Function GetMaxLongExposureClock Lib "StTrgAPI.dll" Alias "StTrg_GetMaxLongExposureClock" (ByVal hCamera As IntPtr, ByRef pdwMaximumExposureClock As System.UInt32) As integer
	Public Declare Function GetExposureClockFromTime Lib "StTrgAPI.dll" Alias "StTrg_GetExposureClockFromTime" (ByVal hCamera As IntPtr, ByVal fExpTime As Single, ByRef pdwExposureClock As System.UInt32) As integer
	Public Declare Function GetExposureTimeFromClock Lib "StTrgAPI.dll" Alias "StTrg_GetExposureTimeFromClock" (ByVal hCamera As IntPtr, ByVal dwExposureClock As System.UInt32, ByRef pfExpTime As Single) As integer
	Public Declare Function SetDigitalGain Lib "StTrgAPI.dll" Alias "StTrg_SetDigitalGain" (ByVal hCamera As IntPtr, ByVal wDigitalGain As System.UInt16) As integer
	Public Declare Function GetDigitalGain Lib "StTrgAPI.dll" Alias "StTrg_GetDigitalGain" (ByVal hCamera As IntPtr, ByRef pwDigitalGain As System.UInt16) As integer
	Public Declare Function ALC Lib "StTrgAPI.dll" Alias "StTrg_ALC" (ByVal hCamera As IntPtr, ByVal wCurrentBrightness As System.UInt16, ByRef pdwALCStatus As System.UInt32) As integer
	Public Declare Function GetAveragePixelValue Lib "StTrgAPI.dll" Alias "StTrg_GetAveragePixelValue" (ByVal dwImageWidth As System.UInt32, ByVal dwImageHeight As System.UInt32, ByVal wColorArray As System.UInt16, ByVal dwTransferBitsPerPixel As System.UInt32,  pbyteRaw As IntPtr, ByVal dwAOIOffsetX As System.UInt32, ByVal dwAOIOffsetY As System.UInt32, ByVal dwAOIWidth As System.UInt32, ByVal dwAOIHeight As System.UInt32,  pfAverage As IntPtr) As integer
	Public Declare Function SetALCMode Lib "StTrgAPI.dll" Alias "StTrg_SetALCMode" (ByVal hCamera As IntPtr, ByVal byteALCMode As Byte) As integer
	Public Declare Function GetALCMode Lib "StTrgAPI.dll" Alias "StTrg_GetALCMode" (ByVal hCamera As IntPtr, ByRef pbyteALCMode As Byte) As integer
	Public Declare Function SetALCTargetLevel Lib "StTrgAPI.dll" Alias "StTrg_SetALCTargetLevel" (ByVal hCamera As IntPtr, ByVal wLevel As System.UInt16) As integer
	Public Declare Function GetALCTargetLevel Lib "StTrgAPI.dll" Alias "StTrg_GetALCTargetLevel" (ByVal hCamera As IntPtr, ByRef pwLevel As System.UInt16) As integer
	Public Declare Function GetAGCMinGain Lib "StTrgAPI.dll" Alias "StTrg_GetAGCMinGain" (ByVal hCamera As IntPtr, ByRef pwMinGain As System.UInt16) As integer
	Public Declare Function SetAGCMinGain Lib "StTrgAPI.dll" Alias "StTrg_SetAGCMinGain" (ByVal hCamera As IntPtr, ByVal wMinGain As System.UInt16) As integer
	Public Declare Function GetAGCMaxGain Lib "StTrgAPI.dll" Alias "StTrg_GetAGCMaxGain" (ByVal hCamera As IntPtr, ByRef pwMaxGain As System.UInt16) As integer
	Public Declare Function SetAGCMaxGain Lib "StTrgAPI.dll" Alias "StTrg_SetAGCMaxGain" (ByVal hCamera As IntPtr, ByVal wMaxGain As System.UInt16) As integer
	Public Declare Function GetAEMinExposureClock Lib "StTrgAPI.dll" Alias "StTrg_GetAEMinExposureClock" (ByVal hCamera As IntPtr, ByRef pdwMinExposureClock As System.UInt32) As integer
	Public Declare Function SetAEMinExposureClock Lib "StTrgAPI.dll" Alias "StTrg_SetAEMinExposureClock" (ByVal hCamera As IntPtr, ByVal dwMinExposureClock As System.UInt32) As integer
	Public Declare Function GetAEMaxExposureClock Lib "StTrgAPI.dll" Alias "StTrg_GetAEMaxExposureClock" (ByVal hCamera As IntPtr, ByRef pdwMaxExposureClock As System.UInt32) As integer
	Public Declare Function SetAEMaxExposureClock Lib "StTrgAPI.dll" Alias "StTrg_SetAEMaxExposureClock" (ByVal hCamera As IntPtr, ByVal dwMaxExposureClock As System.UInt32) As integer
	
	'------------------------------------------------------------------------------
	'Trigger
	'------------------------------------------------------------------------------
	Public Declare Function GetTriggerMode Lib "StTrgAPI.dll" Alias "StTrg_GetTriggerMode" (ByVal hCamera As IntPtr, ByRef pdwTriggerMode As System.UInt32) As integer
	Public Declare Function SetTriggerMode Lib "StTrgAPI.dll" Alias "StTrg_SetTriggerMode" (ByVal hCamera As IntPtr, ByVal dwTriggerMode As System.UInt32) As integer
	Public Declare Function GetTriggerTiming Lib "StTrgAPI.dll" Alias "StTrg_GetTriggerTiming" (ByVal hCamera As IntPtr, ByVal dwTriggerTimingType As System.UInt32, ByRef pdwValue As System.UInt32) As integer
	Public Declare Function SetTriggerTiming Lib "StTrgAPI.dll" Alias "StTrg_SetTriggerTiming" (ByVal hCamera As IntPtr, ByVal dwTriggerTimingType As System.UInt32, ByVal dwValue As System.UInt32) As integer
	Public Declare Function SoftTrigger Lib "StTrgAPI.dll" Alias "StTrg_SoftTrigger" (ByVal hCamera As IntPtr) As integer
	Public Declare Function ReadSDRAMTrigger Lib "StTrgAPI.dll" Alias "StTrg_ReadSDRAMTrigger" (ByVal hCamera As IntPtr) As integer
	Public Declare Function SoftSubTrigger Lib "StTrgAPI.dll" Alias "StTrg_SoftSubTrigger" (ByVal hCamera As IntPtr) As integer
	Public Declare Function TriggerReadOut Lib "StTrgAPI.dll" Alias "StTrg_TriggerReadOut" (ByVal hCamera As IntPtr) As integer
	
	'------------------------------------------------------------------------------
	'IOPin
	'------------------------------------------------------------------------------
	Public Declare Function GetIOPinDirection Lib "StTrgAPI.dll" Alias "StTrg_GetIOPinDirection" (ByVal hCamera As IntPtr, ByRef pdwDirection As System.UInt32) As integer
	Public Declare Function SetIOPinDirection Lib "StTrgAPI.dll" Alias "StTrg_SetIOPinDirection" (ByVal hCamera As IntPtr, ByVal dwDirection As System.UInt32) As integer
	Public Declare Function GetIOPinPolarity Lib "StTrgAPI.dll" Alias "StTrg_GetIOPinPolarity" (ByVal hCamera As IntPtr, ByRef pdwPolarity As System.UInt32) As integer
	Public Declare Function SetIOPinPolarity Lib "StTrgAPI.dll" Alias "StTrg_SetIOPinPolarity" (ByVal hCamera As IntPtr, ByVal dwPolarity As System.UInt32) As integer
	Public Declare Function GetIOPinMode Lib "StTrgAPI.dll" Alias "StTrg_GetIOPinMode" (ByVal hCamera As IntPtr, ByVal bytePinNo As Byte, ByRef pdwMode As System.UInt32) As integer
	Public Declare Function SetIOPinMode Lib "StTrgAPI.dll" Alias "StTrg_SetIOPinMode" (ByVal hCamera As IntPtr, ByVal bytePinNo As Byte, ByVal dwMode As System.UInt32) As integer
	Public Declare Function GetIOPinStatus Lib "StTrgAPI.dll" Alias "StTrg_GetIOPinStatus" (ByVal hCamera As IntPtr, ByRef pdwStatus As System.UInt32) As integer
	Public Declare Function SetIOPinStatus Lib "StTrgAPI.dll" Alias "StTrg_SetIOPinStatus" (ByVal hCamera As IntPtr, ByVal dwStatus As System.UInt32) As integer
	Public Declare Function GetSwStatus Lib "StTrgAPI.dll" Alias "StTrg_GetSwStatus" (ByVal hCamera As IntPtr, ByRef pdwSwStatus As System.UInt32) As integer
	Public Declare Function GetLEDStatus Lib "StTrgAPI.dll" Alias "StTrg_GetLEDStatus" (ByVal hCamera As IntPtr, ByRef pdwLEDStatus As System.UInt32) As integer
	Public Declare Function SetLEDStatus Lib "StTrgAPI.dll" Alias "StTrg_SetLEDStatus" (ByVal hCamera As IntPtr, ByVal dwLEDStatus As System.UInt32) As integer
	
	'------------------------------------------------------------------------------
	'Timeout
	'------------------------------------------------------------------------------
	Public Declare Function GetTimeOut Lib "StTrgAPI.dll" Alias "StTrg_GetTimeOut" (ByVal hCamera As IntPtr, ByVal dwTimeOutType As System.UInt32, ByRef pdwTimeOutMS As System.UInt32) As integer
	Public Declare Function SetTimeOut Lib "StTrgAPI.dll" Alias "StTrg_SetTimeOut" (ByVal hCamera As IntPtr, ByVal dwTimeOutType As System.UInt32, ByVal dwTimeOutMS As System.UInt32) As integer
	
	'------------------------------------------------------------------------------
	'Callback Function
	'------------------------------------------------------------------------------
	Public Declare Function SetExposureEndCallback Lib "StTrgAPI.dll" Alias "StTrg_SetExposureEndCallback" (ByVal hCamera As IntPtr, ByVal func As funcExposureEndCallback, ByVal pvContext As IntPtr) As integer
	Public Declare Function SetTransferEndCallback Lib "StTrgAPI.dll" Alias "StTrg_SetTransferEndCallback" (ByVal hCamera As IntPtr, ByVal func As funcTransferEndCallback, ByVal pvContext As IntPtr) As integer
	Public Declare Function SetRcvErrorCallback Lib "StTrgAPI.dll" Alias "StTrg_SetRcvErrorCallback" (ByVal hCamera As IntPtr, ByVal func As funcRcvErrorCallback, ByVal pvContext As IntPtr) As integer
	
	'------------------------------------------------------------------------------
	'Image Acquisition
	'------------------------------------------------------------------------------
	Public Declare Function SetRcvMsgWnd Lib "StTrgAPI.dll" Alias "StTrg_SetRcvMsgWnd" (ByVal hCamera As IntPtr, ByVal hWnd As IntPtr) As integer
	Public Declare Function SetRawSnapShotBufferCount Lib "StTrgAPI.dll" Alias "StTrg_SetRawSnapShotBufferCount" (ByVal hCamera As IntPtr, ByVal dwBufferCount As System.UInt32) As integer
	Public Declare Function TakeRawSnapShot Lib "StTrgAPI.dll" Alias "StTrg_TakeRawSnapShot" (ByVal hCamera As IntPtr,  pbyteRaw As IntPtr, ByVal dwBufferSize As System.UInt32, ByRef pdwNumberOfByteTrans As System.UInt32, ByRef pdwFrameNo As System.UInt32, ByVal dwMilliseconds As System.UInt32) As integer
	
	'------------------------------------------------------------------------------
	'Transfer Control
	'------------------------------------------------------------------------------
	Public Declare Function StartTransfer Lib "StTrgAPI.dll" Alias "StTrg_StartTransfer" (ByVal hCamera As IntPtr) As integer
	Public Declare Function StopTransfer Lib "StTrgAPI.dll" Alias "StTrg_StopTransfer" (ByVal hCamera As IntPtr) As integer
	
	'------------------------------------------------------------------------------
	'Noise Reduction
	'------------------------------------------------------------------------------
	Public Declare Function NoiseReduction2 Lib "StTrgAPI.dll" Alias "StTrg_NoiseReduction2" (ByVal hCamera As IntPtr, ByVal dwNoiseReductionMode As System.UInt32, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16,  pbyteRaw As IntPtr, ByVal wRawBitsPerPixel As System.UInt16) As integer
	Public Declare Function NoiseReduction Lib "StTrgAPI.dll" Alias "StTrg_NoiseReduction" (ByVal hCamera As IntPtr, ByVal dwNoiseReductionMode As System.UInt32, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16,  pbyteRaw As IntPtr) As integer
